# project-bartosz-smolarczyk-dawid-sula

./: Cargo.toml  README.md  function_generator.py
simulation-tests/: example-1.json  example-2.json  simple1.in  single-node-1.in  single-node-1.json  single-node-2.in  single-node-2.json  single-node-3.in  single-node-3.json  three-nodes-1.in  three-nodes-1.json  two-nodes-1.in  two-nodes-1.json  two-nodes-2.in  two-nodes-2.json
src/: economy.rs  main.rs  util.rs
src/economy/: entity.rs  function.rs  geography.rs  market.rs  mod.rs  simulation.rs
src/economy/entity/: consumer.rs  entity.rs  producer.rs
src/economy/function/: base_function.rs  demand.rs  mod.rs  oversupply.rs  supply.rs
src/economy/geography/: city.rs  connection.rs  network.rs
src/economy/types/: mod.rs  price.rs  volume.rs
src/util/: algorithm.rs  data_structure.rs  files.rs  mod.rs  testing.rs  types.rs
src/util/algorithm/: max_value_flow.rs  min_cost_flow.rs
src/util/data_structure/: directed_graph.rs  mod.rs  weighted_directed_graph.rs  weighted_graph.rs
