[package]
name = "global_market"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1.10"
line_intersection = "0.4.0"
geo = "0.4.13"
ordered-float = "1.0"
rayon = "1.5.3"
dashmap = "5.3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
